--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimaryDark">#B38A4C</color>
     <color name="colorAccent">#084D14</color>
     <color name="white">#FFFFFF</color>
-    <color name="white2">#5EFFFFFF</color>
+    <color name="white2">#ACABAB</color>
     <color name="ivory">#FFFFF0</color>
     <color name="light_yellow">#FFFFE0</color>
     <color name="boom_light_yellow">#9AFFFEE0</color>
