--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -20,29 +20,30 @@
         app:title="@string/event"
         app:titleTextColor="@color/white" />
 
-
-    <androidx.cardview.widget.CardView
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:elevation="10dp">
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
+
 
             <RelativeLayout
                 android:id="@+id/relativelayout"
                 android:layout_width="match_parent"
-                android:layout_height="286dp">
+                android:layout_height="wrap_content">
 
-
-                <com.github.florent37.shapeofview.ShapeOfView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="0dp"
-                    app:shape_clip_drawable="@drawable/image_background">
+                    android:layout_height="286dp"
+                    app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/eventPhoto"
@@ -51,7 +52,8 @@
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
                         android:tint="@color/photo_tint" />
-                </com.github.florent37.shapeofview.ShapeOfView>
+
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -101,51 +103,50 @@
 
                 </LinearLayout>
 
+
             </RelativeLayout>
 
-
-            <androidx.core.widget.NestedScrollView
-                android:id="@+id/nestedScrollView"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="-50dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                app:cardCornerRadius="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
-
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="20dp"
                         android:text="@string/Description"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/eventdesc"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
                         android:lineSpacingMultiplier="1.5"
                         android:padding="12dp"
                         android:textColor="@color/black"
                         android:textSize="14sp"
 
                         />
-
-
                 </LinearLayout>
-
-
-            </androidx.core.widget.NestedScrollView>
+            </androidx.cardview.widget.CardView>
 
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
