--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -58,9 +58,9 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:elevation="2dp"
-                app:cardCornerRadius="20dp"
-                android:layout_margin="5dp">
+                app:cardCornerRadius="5dp">
 
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/imageSlider"
@@ -238,49 +238,14 @@
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <androidx.cardview.widget.CardView
+                    <LinearLayout
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
                         android:layout_weight="1"
-                        android:elevation="5dp"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        app:cardCornerRadius="8dp">
-
-                        <LinearLayout
-                            android:id="@+id/map"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="70dp"
-                                android:layout_height="70dp"
-                                android:layout_margin="5dp"
-                                android:src="@drawable/target" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="2dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginEnd="10dp"
-                                android:background="@color/colorPrimary" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:gravity="center"
-                                android:text="@string/Map"
-                                android:textColor="#BF9054"
-                                android:textSize="18sp" />
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
+                        android:orientation="vertical" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -290,49 +255,6 @@
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                    <androidx.cardview.widget.CardView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:layout_weight="1"
-                        android:elevation="5dp"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        app:cardCornerRadius="8dp">
-
-                        <LinearLayout
-                            android:id="@+id/AR"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="70dp"
-                                android:layout_height="70dp"
-                                android:layout_margin="5dp"
-                                android:src="@drawable/augmented_reality" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="2dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginEnd="10dp"
-                                android:background="@color/colorPrimary" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:gravity="center"
-                                android:text="@string/Start_AR"
-                                android:textColor="#BF9054"
-                                android:textSize="18sp" />
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
 
                     <LinearLayout
                         android:layout_width="match_parent"
