--- a/app/src/main/res/drawable/image_background.xml
+++ b/app/src/main/res/drawable/image_background.xml
@@ -16,6 +16,11 @@
                     android:endColor="@color/white2"
                     android:startColor="#0fdcc9" />
                 <corners
+                    android:bottomRightRadius="40dp"
+                    android:topRightRadius="0dp"
+                    android:bottomLeftRadius="40dp"
+                    />
+<solid
                     android:bottomLeftRadius="10dp"
                     android:bottomRightRadius="10dp"
                     android:topLeftRadius="10dp"
