--- a/app/src/main/res/layout/image_slider_layout_item.xml
+++ b/app/src/main/res/layout/image_slider_layout_item.xml
@@ -8,5 +8,6 @@
         android:id="@+id/iv_auto_image_slider"
         android:layout_width="match_parent"
         android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         android:layout_height="match_parent" />
 </LinearLayout>
