--- a/app/src/main/res/layout/tour_item.xml
+++ b/app/src/main/res/layout/tour_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="10dp"
-        app:cardBackgroundColor="@color/yellow">
+        app:cardBackgroundColor="#BDBDBD">
 
         <LinearLayout
             android:layout_width="match_parent"
