--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -149,6 +149,7 @@
                             android:innerRadius="0dp"
                             android:shape="ring"
                             android:thicknessRatio="1.9"
+                            app:cardElevation="0dp"
                             app:cardBackgroundColor="@color/white3"
                             >
 
@@ -174,19 +175,7 @@
                                 />
                         </androidx.cardview.widget.CardView>
 
-                        <Button
-                            android:id="@+id/BookingTic"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="10dp"
-                            android:background="@drawable/button_background"
-                            android:text="@string/Booking_Tickt"
-                            android:textColor="@color/white"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
+
 
                     </LinearLayout>
                 </LinearLayout>
