--- a/app/src/main/res/layout/activity_internet_checking.xml
+++ b/app/src/main/res/layout/activity_internet_checking.xml
@@ -14,6 +14,7 @@
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
+        app:title="@string/no_connection"
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:titleTextColor="@color/white" />
