--- a/app/src/main/res/layout/activity_shopdays_item.xml
+++ b/app/src/main/res/layout/activity_shopdays_item.xml
@@ -1,60 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:stretchColumns="1"
     tools:context=".shopdays_item">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp"
-        >
-
-    <TextView
-        android:id="@+id/shopday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wednesday"
-        android:textSize="15sp"
-        android:layout_marginStart="10dp"
-
-        android:textColor="@color/black"/>
-
-     <TextView
-         android:id="@+id/shopopentime"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="16:00"
-         android:layout_marginStart="19dp"
-         android:textSize="15sp"
-         android:textColor="@color/black"
-         />
 
 
+    <TableRow>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/to"
-            android:layout_marginStart="10dp"
-            android:textSize="15sp"
-            android:textColor="@color/black"/>
-
+            android:id="@+id/shopday"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:text="sunday"
+            android:textSize="15sp" />
         <TextView
-            android:id="@+id/shopclosetime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="22:00"
-            android:layout_marginStart="10dp"
+            android:id="@+id/shopopentime"
             android:textSize="15sp"
-            android:textColor="@color/black"/>
+            android:layout_marginStart="20dp"/>
+    </TableRow>
 
-
-
-
-    </LinearLayout>
-</LinearLayout>
+</TableLayout>
